...
    private func configureOutlets() {
        navigationItem.setHidesBackButton(true, animated: false)
        refreshControl.bounds.origin.y = refreshTableSpinnerPosition
        refreshControl.tintColor = ThemeColor.blackMV.MVColor
        refreshControl.addTarget(self, action: #selector(refresh), for: .valueChanged)
        characterTableView.addSubview(refreshControl)
        characterTableView.accessibilityIdentifier = "characterTable"
        title = "charactersTitle".localized
        characterTableView.delegate = self
        characterTableView.dataSource = self
        searchController.searchBar.delegate = self
        characterTableView.tableFooterView = UIView()
        characterTableView.estimatedRowHeight = estimatedTableRowHeight
...
