<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="Brown-Regular.otf">
            <string>Brown-Regular</string>
        </array>
    </customFonts>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginAPIViewController" customModule="MarvelChallenge" customModuleProvider="target">
            <connections>
                <outlet property="loginAPIButton" destination="Ptb-cE-AVU" id="7X6-ez-hRP"/>
                <outlet property="privateKeyLabel" destination="urc-c2-zht" id="05t-JZ-iPu"/>
                <outlet property="privateKeyTextField" destination="jGk-s8-3nY" id="1w3-TE-3ip"/>
                <outlet property="publicKeyLabel" destination="mm5-gN-EhY" id="tHl-y5-pk3"/>
                <outlet property="publicKeyTextField" destination="2Me-gu-Cum" id="m4D-NJ-fTZ"/>
                <outlet property="view" destination="Jjn-rp-EOW" id="5jE-Qa-ZQ0"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Jjn-rp-EOW">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Me-gu-Cum" customClass="ShakingTextField" customModule="Marvel" customModuleProvider="target">
                    <rect key="frame" x="90" y="189.5" width="234" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="publicKeyTextField"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="34" id="LuX-W4-WDy"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                    <textInputTraits key="textInputTraits" textContentType="username"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jGk-s8-3nY" customClass="ShakingTextField" customModule="Marvel" customModuleProvider="target">
                    <rect key="frame" x="90" y="276" width="234" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="privateKeyTextField"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="34" id="L3s-WE-RzN"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                    <textInputTraits key="textInputTraits" textContentType="username"/>
                </textField>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="#Public key" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mm5-gN-EhY">
                    <rect key="frame" x="90" y="170" width="239" height="16.5"/>
                    <fontDescription key="fontDescription" name="Brown-Regular" family="Brown" pointSize="14"/>
                    <color key="textColor" red="0.49803921569999998" green="0.49803921569999998" blue="0.49803921569999998" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="#Private Key" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="urc-c2-zht">
                    <rect key="frame" x="90" y="256.5" width="239" height="16.5"/>
                    <fontDescription key="fontDescription" name="Brown-Regular" family="Brown" pointSize="14"/>
                    <color key="textColor" red="0.49803921569999998" green="0.49803921569999998" blue="0.49803921569999998" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ptb-cE-AVU">
                    <rect key="frame" x="109" y="351" width="197" height="36"/>
                    <color key="backgroundColor" systemColor="linkColor"/>
                    <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                    <color key="tintColor" systemColor="groupTableViewBackgroundColor"/>
                    <state key="normal" title="#Login API"/>
                    <connections>
                        <action selector="onLoginButton" destination="-1" eventType="touchUpInside" id="LE4-Km-VbQ"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstAttribute="trailing" secondItem="2Me-gu-Cum" secondAttribute="trailing" constant="90" id="3BV-tp-wV8"/>
                <constraint firstAttribute="trailing" secondItem="urc-c2-zht" secondAttribute="trailing" constant="85" id="AdE-zf-uxs"/>
                <constraint firstAttribute="trailing" secondItem="mm5-gN-EhY" secondAttribute="trailing" constant="85" id="CCF-IP-ro2"/>
                <constraint firstItem="mm5-gN-EhY" firstAttribute="leading" secondItem="Jjn-rp-EOW" secondAttribute="leading" constant="90" id="DoL-l0-kbd"/>
                <constraint firstItem="jGk-s8-3nY" firstAttribute="leading" secondItem="Jjn-rp-EOW" secondAttribute="leading" constant="90" id="MBQ-bz-AxL"/>
                <constraint firstItem="2Me-gu-Cum" firstAttribute="leading" secondItem="Jjn-rp-EOW" secondAttribute="leading" constant="90" id="MXY-BV-SQE"/>
                <constraint firstItem="mm5-gN-EhY" firstAttribute="top" secondItem="Jjn-rp-EOW" secondAttribute="top" constant="170" id="RiW-DX-yRR"/>
                <constraint firstItem="2Me-gu-Cum" firstAttribute="top" secondItem="mm5-gN-EhY" secondAttribute="bottom" constant="3" id="TCO-ba-J7N"/>
                <constraint firstAttribute="trailing" secondItem="jGk-s8-3nY" secondAttribute="trailing" constant="90" id="b4b-PW-uph"/>
                <constraint firstItem="urc-c2-zht" firstAttribute="leading" secondItem="Jjn-rp-EOW" secondAttribute="leading" constant="90" id="fg3-7c-8W1"/>
                <constraint firstItem="urc-c2-zht" firstAttribute="top" secondItem="2Me-gu-Cum" secondAttribute="bottom" constant="33" id="fjQ-W1-4LB"/>
                <constraint firstItem="Ptb-cE-AVU" firstAttribute="leading" secondItem="Jjn-rp-EOW" secondAttribute="leading" constant="109" id="jAL-kn-VfC"/>
                <constraint firstItem="jGk-s8-3nY" firstAttribute="top" secondItem="urc-c2-zht" secondAttribute="bottom" constant="3" id="qWK-b8-skh"/>
                <constraint firstItem="Ptb-cE-AVU" firstAttribute="top" secondItem="jGk-s8-3nY" secondAttribute="bottom" constant="41" id="qvu-Kg-0js"/>
                <constraint firstAttribute="trailing" secondItem="Ptb-cE-AVU" secondAttribute="trailing" constant="108" id="xjL-kK-0vL"/>
            </constraints>
            <point key="canvasLocation" x="-810" y="-43"/>
        </view>
    </objects>
    <resources>
        <systemColor name="groupTableViewBackgroundColor">
            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="linkColor">
            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
